refactored finding posts, added pagination and gorm
